--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <h1>Grow A Garden – Pet Inventory</h1>
     <div class="actions">
-      <button id="btn-share" title="Copy shareable link">Share</button>
+      <button id="btn-share" title="Copy shareable link">Share Inventory</button>
       <a id="btn-reset" href="#" title="Clear inventory">Reset</a>
     </div>
   </header>
@@ -27,7 +27,7 @@
         <option value="name-desc">Name (Z→A)</option>
         <option value="rarity-asc">Rarity (low→high)</option>
         <option value="rarity-desc">Rarity (high→low)</option>
-        <option value="mutation-asc">Mutation (A→Z)</option>
+        <option value="mutation-asc" selected>Mutation (A→Z)</option>
         <option value="mutation-desc">Mutation (Z→A)</option>
       </select>
     </div>
