--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <select id="sort-select">
         <option value="name-asc">Name (A→Z)</option>
         <option value="name-desc">Name (Z→A)</option>
-        <option value="rarity-asc">Rarity (low→high)</option>
+        <option value="rarity-asc" selected>Rarity (low→high)</option>
         <option value="rarity-desc">Rarity (high→low)</option>
-        <option value="mutation-asc" selected>Mutation (A→Z)</option>
+        <option value="mutation-asc">Mutation (A→Z)</option>
         <option value="mutation-desc">Mutation (Z→A)</option>
       </select>
     </div>
